More port work